fix align for login page

--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -1,7 +1,7 @@
 // this is for shared components
 @import './theme.scss';
 .hero {
-  height: 50vh;
+  //height: 50vh;
   overflow: hidden;
   position: relative;
   display: flex;
